// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/ResizableV.vue snapshot default 1`] = `
<div
  class="resizable-v-wrapper"
>
  <div
    class="top"
  >
    
    slot_top
    
  </div>
  <div
    class="anchor"
  >
    <div />
  </div>
  <div
    class="bottom"
  >
    
    slot_bottom
    
    <!--v-if-->
  </div>
</div>
`;

exports[`src/components/atoms/ResizableV.vue snapshot dense 1`] = `
<div
  class="resizable-v-wrapper"
>
  <div
    class="top"
  >
    
    
  </div>
  <!--v-if-->
  <div
    class="bottom"
  >
    
    
    <div
      class="anchor-dence"
    />
  </div>
</div>
`;
